# pumaguard

./: .gitignore  .gitmodules  API_REFERENCE.md  CACHING_REVIEW.md  CAMERA_DETECTION_SUMMARY.md  CAMERA_QUICK_REFERENCE.md  MANIFEST.in  Makefile  QUICKSTART_CAMERA_UI.md  README.md  ansible.cfg  notebook98fc9c671b.ipynb  prepare-device.md  pubspec.yaml  pylintrc  pyproject.toml
.github/: copilot-instructions.md  dependabot.yaml
docs/: API_REFERENCE.md  CAMERA_AUTO_REMOVAL.md  CAMERA_HEARTBEAT.md  CAMERA_STATUS_REFRESH.md  CAMERA_TRACKING.md  CAPTIVE_PORTAL.md  DEVICE_REMOVAL.md  HEARTBEAT_FEATURE.md  PUMA_THRESHOLD.md  SETTINGS_PERSISTENCE.md  SHELLY_PLUG_SWITCH_API.md  SOUND_SETTINGS_FIX.md  TIME_SYNC.md  WIFI_CONFIGURATION.md  WIFI_DEBUG_LOGGING.md  WIFI_FEATURE_SUMMARY.md  WIFI_IMPLEMENTATION_COMPLETE.md  WIFI_INDEX.md  WIFI_INTERFACE_DETECTION.md  WIFI_MIGRATION_GUIDE.md  WIFI_QUICK_REFERENCE.md  XDG_MIGRATION.md
fonts/: download_fonts.sh
lib/: main.dart
notebooks/: dogs-vs-cats-classification-with-transfer-learning.ipynb  dogs-vs-cats-classification-with-xception.ipynb  pumaguard.ipynb
pumaguard/: AUTOMATIC_PLUG_CONTROL.md  CAMERA_AUTO_REMOVAL_IMPLEMENTATION.md  CAMERA_AUTO_REMOVAL_QUICKSTART.md  CAMERA_AUTO_REMOVAL_README.md  CAMERA_AUTO_REMOVAL_VALIDATION.md  DEVICE_REDETECTION_FIX.md  SHELLY_PLUG_CONTROL_SUMMARY.md  SHELLY_PLUG_SWITCH_IMPLEMENTATION.md  SHELLY_PLUG_TESTING_SUMMARY.md  TEST_COVERAGE_IMPROVEMENTS.md  __init__.py  camera_heartbeat.py  classify.py  device_heartbeat.py  main.py  model-registry.yaml  model.py  model_cli.py  model_downloader.py  plug_heartbeat.py  presets.py  server.py  shelly_control.py  sound.py  train.py  utils.py  verify.py  web_ui.py
pumaguard-ui/: API_REFERENCE.md  Makefile  README.md  pubspec.yaml
scripts/: README_CAMERA_TESTING.md  add_fake_cameras.sh  ansible.cfg  configure-device.yaml  configure-laptop.yaml  configure-pi.yaml  create-test-vm.sh  deploy-pumaguard.yaml  device_vault.yaml  device_vault.yaml.example  image-sd-card-for-pi.sh  install-pumaguard.sh  laptop_config.yaml  play_sound.py  secrets.yaml  test-server.sh  wireless_credentials.yaml
snap/: snapcraft.yaml
templates/: netplan.j2
tests/: manual_test_plug_switch.py  test_artifacts.py  test_camera_heartbeat.py  (+32 more)
(+91 files in other folders)
